--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -23,9 +22,26 @@
   font-weight: 900;
   font-display: swap;
 }
+html {
+  background-image: linear-gradient(to right, #08e6ea, #2af598, #ffea00);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+}
 
-*{
-    font-family: 'NeueMontreal';
-    
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+* {
+  font-family: "NeueMontreal";
+  box-sizing: border-box;
 }
 /* PP Neue Montreal,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif */
